 * Render the Wagtail User Bar on non `Page` views (Caitlin White, Coen van der Kamp)
 * Add ability to define `form_classname` on `ListBlock` & `StreamBlock` (LB (Ben Johnston))
 * Add documentation about how to use `Rustface` for image feature detection (Neal Todd)
 * Improve performance of public/not_public queries in `PageQuerySet` (Timothy Bautista)
 * Fix: Support IPv6 domain (Alex Gleason, Coen van der Kamp)
 * Fix: Ensure link to add a new user works when no users are visible in the users list (LB (Ben Johnston))
 * Fix: `AbstractEmailForm` saved submission fields are now aligned with the email content fields, `form.cleaned_data` will be used instead of `form.fields` (Haydn Greatnews)
 * Fix: Removed ARIA `role="table"` from TableBlock output (Thibaud Colas)
 * Fix: Set Cache-Control header to prevent page preview responses from being cached (Tomas Walch)
 * Fix: Accept unicode characters in slugs on the "copy page" form (François Poulain)
 * Fix: Remove top padding when `FieldRowPanel` is used inside a `MultiFieldPanel` (Jérôme Lebleu)


2.9 (04.05.2020)
~~~~~~~~~~~~~~~~

 * Removed support for Django 2.1
 * Added data exports in XLSX and CSV format for reports, ModelAdmin and form submissions (Jacob Topp-Mugglestone)
 * Added support for creating custom reports (Jacob Topp-Mugglestone)
 * Skip page validation when unpublishing a page (Samir Shah)
 * Added `MultipleChoiceBlock` block type for StreamField (James O'Toole)
 * ChoiceBlock now accepts a `widget` keyword argument (James O'Toole)
 * Reduced contrast of rich text toolbar (Jack Paine)
 * Support the rel attribute on custom ModelAdmin buttons (Andy Chosak)
 * Server-side page slug generation now respects `WAGTAIL_ALLOW_UNICODE_SLUGS` (Arkadiusz Michał Ryś)
 * Wagtail admin no longer depends on SiteMiddleware, avoiding incompatibility with Django sites framework and redundant database queries (aritas1, timmysmalls, Matt Westcott)